Switched to Normalize.css; enabled HTML5 mode; and imported new blog posts

--- a/assets/sass/application.scss
+++ b/assets/sass/application.scss
@@ -1,7 +1,7 @@
 @import 'compass';
 @import 'compass/layout';
 
-@import 'vendor/skeleton/base';
-@import 'vendor/skeleton/grid';
+@import 'vendor/skeleton';
+@import 'vendor/normalize';
 @import 'partial/layout';
 @import 'partial/media';
